bat.string1.lessons.bat.string1.FrontTimes.scala.error
frontTimes:9: error: ')' expected but integer literal found.
		case 1 => coupe = substring(int 0, int 1)
                                                ^